feat: add icons css variables

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -9,3 +9,8 @@ $negative  : #bd35c9
 $info      : #22b7bf
 $warning   : #bd35c9
 $space-base : 16px
+
+$icon-button-mobile-size: 16px
+$icon-button-desktop-size: 16px
+$icon-mobile-size: 55px
+$icon-desktop-size: 40px
